[About Us] Fixed excessive padding on small device widths

--- a/src/pages/AboutusPage/aboutUsPage.module.css
+++ b/src/pages/AboutusPage/aboutUsPage.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   min-height: 1000px;
-  padding: 78px 149px;
+  padding: 40px 10vw;
 }
 
 .about-us {
